fixed overflow issue

--- a/src/scss/Wish.scss
+++ b/src/scss/Wish.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     flex-direction: column;
     overflow: hidden;
+    padding-bottom: 30px;
 
 
     .wish {
